final draft for econ 436-1

--- a/analysis/output/inc_weight_table.tex
+++ b/analysis/output/inc_weight_table.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.2.3 by Marek Hlavac, Social Policy Institute. E-mail: marek.hlavac at gmail.com
-% Date and time: Mon, Dec 19, 2022 - 22:27:21
+% Date and time: Sat, Dec 24, 2022 - 02:20:40
 \begin{table}[!htbp] \centering 
   \caption{} 
   \label{} 
@@ -9,26 +9,27 @@
 \hline \\[-1.8ex] 
 State & Weight \\ 
 \hline \\[-1.8ex] 
-South Dakota & 0.146 \\ 
-Hawaii & 0.136 \\ 
-Rhode Island & 0.119 \\ 
-Nevada & 0.088 \\ 
-New Hampshire & 0.068 \\ 
-Louisiana & 0.06 \\ 
-New Mexico & 0.027 \\ 
-Colorado & 0.025 \\ 
-District of Columbia & 0.02 \\ 
-North Carolina & 0.02 \\ 
-Texas & 0.02 \\ 
-Delaware & 0.018 \\ 
-Kentucky & 0.017 \\ 
-Maryland & 0.017 \\ 
-Montana & 0.015 \\ 
-South Carolina & 0.013 \\ 
-North Dakota & 0.012 \\ 
-Indiana & 0.011 \\ 
-Florida & 0.01 \\ 
-Tennessee & 0.01 \\ 
+Rhode Island & 0.153 \\ 
+Alaska & 0.144 \\ 
+Nevada & 0.109 \\ 
+Delaware & 0.098 \\ 
+Hawaii & 0.098 \\ 
+Louisiana & 0.026 \\ 
+Michigan & 0.024 \\ 
+Tennessee & 0.023 \\ 
+Georgia & 0.021 \\ 
+North Carolina & 0.017 \\ 
+Ohio & 0.016 \\ 
+District of Columbia & 0.015 \\ 
+Florida & 0.014 \\ 
+Indiana & 0.014 \\ 
+Maine & 0.013 \\ 
+Montana & 0.013 \\ 
+Illinois & 0.012 \\ 
+Alabama & 0.011 \\ 
+Idaho & 0.01 \\ 
+Kentucky & 0.01 \\ 
+Colorado & 0.01 \\ 
 \hline \\[-1.8ex] 
 \end{tabular} 
 \end{table} 
