--- a/analysis/output/jobs_weight_table.tex
+++ b/analysis/output/jobs_weight_table.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.2.3 by Marek Hlavac, Social Policy Institute. E-mail: marek.hlavac at gmail.com
-% Date and time: Mon, Dec 19, 2022 - 22:28:15
+% Date and time: Sat, Dec 24, 2022 - 02:21:31
 \begin{table}[!htbp] \centering 
   \caption{} 
   \label{} 
@@ -9,14 +9,12 @@
 \hline \\[-1.8ex] 
 State & Weight \\ 
 \hline \\[-1.8ex] 
-Colorado & 0.46 \\ 
-Nevada & 0.215 \\ 
-District of Columbia & 0.106 \\ 
-Kentucky & 0.078 \\ 
-Tennessee & 0.046 \\ 
-Maryland & 0.038 \\ 
-New Hampshire & 0.027 \\ 
-New Jersey & 0.01 \\ 
+Colorado & 0.545 \\ 
+Nevada & 0.217 \\ 
+District of Columbia & 0.087 \\ 
+Maryland & 0.08 \\ 
+Kentucky & 0.039 \\ 
+Georgia & 0.024 \\ 
 \hline \\[-1.8ex] 
 \end{tabular} 
 \end{table} 
